   the bell.

 * more -i acts like less -I -- that is -i is unconditional ignore case

 * more has its own help message

 * options not specifically supported by more are disabled in the command
   line, and all - and -- options to change flags in the program are
   disabled when in more mode.

 * more ignores all LESSxxx environment variables

 * in more, "s" skips ahead n lines beyond the end of the window (per POSIX) 

 * LESSBINFMT and LESSUTFBINFMT had crasher bugs due to badly incomplete
   validation of printf formats.  I've replaced those with a robust and
   complete specifier checker.  No crasher formats will get through, and
   it still supports width, precision, flags, etc.

 * both help files contained information that is totally irrelevant for
   UNIX.  E.g. we have no way to record control-right or control-left -- this
   information is simply not available in Terminfo.

 * some constructs that alloc then sprintf were replaced with easprintf.
   This requires vasprintf(), but all modern UNIXes have it. (Even Linux!)

 * (from OpenBSD folks, thanks!) less uses basic REs per POSIX when running
   as "more"

 * use safer snprintf, strlcpy, strlcat (and provide safe versions if missing)
   instead of sprintf, strcpy, strcat.  Again, courtesy of OpenBSD.

 * various minor bug fixes, from various parties.

---- >> TODO << ----

 1. it seems silly that less reinvents getopt, consider rewhacking this to
    use standard getopts; we don't have to worry about supporting MS-DOS.

 2. The multibyte character handling for unicode is a local hack.  It should
    just use the current locale, character classification macros, and also
    the wcwidth(), mbstowcs(), mblen(), and such.  This will make it portable
    to other encodings than just UTF-8.

 3. Internationalize the program using gettext().

 4. Allow the help file to come from an external, locale sensitive, location.
    This helps with internationalization.