@@ -1,4 +1,5 @@
 # Copyright (C) 2017  olibre <olibre@lmap.org>
+# Copyright 2017 Garrett D'Amore <garrett@damore.org>
 #
 # You may distribute under the terms of either the GNU General Public
 # License or the Less License, as specified in the README file.
@@ -6,23 +7,56 @@
 # For more information, see the README file.
 
 cmake_minimum_required(VERSION 3.1)
+include(CheckFunctionExists)
 
-project(less-fork VERSION 1.0.0 LANGUAGES C)
+project(less-fork VERSION 1.0.1 LANGUAGES C)
 
 set(SYSNAME	"gdamore")
 set(RELEASE ${PROJECT_VERSION})
 set(PATCHID "unbundled")
+
+# prefer c99 if possible - this may be necessary to enable latest
+# versions of POSIX standards (SUSv3 requires it).
+set(CMAKE_C_STANDARD 99)
+
+# disable GNU extensions etc.
+set(CMAKE_C_EXTENSIONS OFF)
 
 # only for version.c
 add_definitions(-D SYSNAME='"${SYSNAME}"'
                 -D RELEASE='"${RELEASE}"'
                 -D VERSION='"${PATCHID}"')
 
+# pick up 64-bit file size support
+add_definitions(-D _FILE_OFFSET_BITS=64)
+
+find_package(Curses REQUIRED)
+
 # for less and lesskey
-add_definitions(-D SYSDIR='"/etc"')
 include_directories(.)
 
-add_library(compat strlcat.c strlcpy.c)
+set(LESSKEYFILE_SYS "${CMAKE_INSTALL_PREFIX}/etc/sysless" CACHE FILEPATH "System wide lesskey file.")
+add_definitions(-D LESSKEYFILE_SYS='"${LESSKEYFILE_SYS}"')
+
+check_function_exists(strlcat have_strlcat)
+check_function_exists(strlcpy have_strlcpy)
+check_function_exists(vasprintf have_vasprintf)
+
+if (have_strlcat)
+	add_definitions(-D HAVE_STRLCAT=1)
+else()
+	set(compat_sources ${compat_sources} strlcat.c)
+endif()
+
+if (have_strlcpy)
+	add_definitions(-D HAVE_STRLCPY=1)
+else()
+	set(compat_sources ${compat_sources} strlcpy.c)
+endif()
+
+if (have_vasprintf)
+	add_definitions(-D HAVE_VASPRINTF=1)
+endif()
 
 add_executable(mkhelp mkhelp.c)
 add_custom_command(OUTPUT     help.c COMMAND mkhelp < ${CMAKE_SOURCE_DIR}/less.hlp > help.c)
@@ -43,8 +77,9 @@ add_executable(less
         lsystem.c mark.c optfunc.c option.c opttbl.c os.c
         output.c pattern.c position.c prompt.c search.c
         signal.c tags.c ttyin.c morehelp.c version.c
-        ${less_headers})
-target_link_libraries(less compat curses)
+        ${less_headers} ${compat_sources})
+target_include_directories(less SYSTEM PUBLIC ${CURSES_INCLUDE_DIR})
+target_link_libraries(less ${CURSES_LIBRARIES})
 add_dependencies(less generate_help_files) 
 
 source_group("lesskey headers" FILES ${lesskey_headers})
